Coloquei o formulário de contato.

--- a/input.scss
+++ b/input.scss
@@ -40,10 +40,24 @@
   }
 }
 
-.bg-img {
-  background-image: url("img/trilha.jpg");
-  background-size: cover;
-  height: 250px;
-  background-position: center;
-  filter: brightness(50%);
+
+
+.parallax { 
+ min-height: 250px;
+ background: rgba(0, 0, 0, 0.555);
+
 }
+
+.bg-parallax{
+  height: auto;
+  min-height: 250px;
+  background: url("img/trilha.jpg")center;  
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+ //filter: brightness(50%);
+}
+
+
+
