--- a/input.scss
+++ b/input.scss
@@ -59,5 +59,19 @@
  //filter: brightness(50%);
 }
 
+.whatscollor {
+  color: #32BB46;
+}
 
+.social-list {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  padding: 0
+}
 
+.social-list li {
+  padding: 0px 10px;
+  color: #d52856;
+  font-size: 19px
+}
