--- a/output.css
+++ b/output.css
@@ -50,4 +50,21 @@
   background-size: cover;
 }
 
+.whatscollor {
+  color: #32BB46;
+}
+
+.social-list {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  padding: 0;
+}
+
+.social-list li {
+  padding: 0px 10px;
+  color: #d52856;
+  font-size: 19px;
+}
+
 /*# sourceMappingURL=output.css.map */
