--- a/input.scss
+++ b/input.scss
@@ -1,3 +1,4 @@
+
 @mixin crimson {
   background: #d52856;
   border: none;
@@ -18,12 +19,15 @@
   @include crimson();
 }
 
+.bg-lightdark{
+  background: #6351ce;
+}
+
 .container-carrossel {
   height: 535px;
-
   img {
-    object-fit: cover;
-    object-position: center;
+    
+    background-size: cover;
     filter: brightness(50%);
   }
 }
@@ -45,7 +49,7 @@
 .parallax { 
  min-height: 250px;
  background: rgba(0, 0, 0, 0.555);
-
+ background-size: cover;
 }
 
 .bg-parallax{
@@ -63,15 +67,21 @@
   color: #32BB46;
 }
 
-.social-list {
+.profile-social-list {
   display: flex;
   list-style: none;
   justify-content: center;
-  padding: 0
+  padding: 0;
+  li {
+    padding: 0px 10px;
+    color: #d52856;
+    font-size: 19px;
+    a {
+      color: #000;
+      &:hover { 
+        color: #b52249; 
+      }
+    }
+  }
 }
 
-.social-list li {
-  padding: 0px 10px;
-  color: #d52856;
-  font-size: 19px
-}
