--- a/output.css
+++ b/output.css
@@ -14,12 +14,15 @@
   background: #b52249;
 }
 
+.bg-lightdark {
+  background: #6351ce;
+}
+
 .container-carrossel {
   height: 535px;
 }
 .container-carrossel img {
-  object-fit: cover;
-  object-position: center;
+  background-size: cover;
   filter: brightness(50%);
 }
 
@@ -38,6 +41,7 @@
 .parallax {
   min-height: 250px;
   background: rgba(0, 0, 0, 0.555);
+  background-size: cover;
 }
 
 .bg-parallax {
@@ -54,17 +58,22 @@
   color: #32BB46;
 }
 
-.social-list {
+.profile-social-list {
   display: flex;
   list-style: none;
   justify-content: center;
   padding: 0;
 }
-
-.social-list li {
+.profile-social-list li {
   padding: 0px 10px;
   color: #d52856;
   font-size: 19px;
+}
+.profile-social-list li a {
+  color: #000;
+}
+.profile-social-list li a:hover {
+  color: #b52249;
 }
 
 /*# sourceMappingURL=output.css.map */
