--- a/output.css
+++ b/output.css
@@ -20,15 +20,22 @@
 
 .container-carrossel {
   height: 535px;
+  position: relative;
 }
 .container-carrossel img {
-  background-size: cover;
   filter: brightness(50%);
+  position: absolute;
+  left: 30%;
+  -webkit-transform: translate(-30%, 0%);
+  -ms-transform: translate(-30%, 0%);
+  transform: translate(-30%, 0%);
 }
-
-.img-carrossel {
+.container-carrossel .first-1slide {
+  background: url("img/rogerio_flexao.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
   background-size: cover;
-  filter: brightness(50%);
 }
 
 .circular-img {
@@ -45,14 +52,16 @@
 
 .parallax {
   min-height: 250px;
-  background: rgba(0, 0, 0, 0.555);
+  background: rgba(0, 0, 0, 0.35);
   background-size: cover;
+  font-size: 1.8em;
+  font-weight: bold;
 }
 
 .bg-parallax {
   height: auto;
   min-height: 250px;
-  background: url("img/trilha.jpg") center;
+  background: url("img/levantamento_peso.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -63,22 +72,41 @@
   color: #32BB46;
 }
 
-.profile-social-list {
-  display: flex;
+.social-list {
   list-style: none;
-  justify-content: center;
   padding: 0;
+  color: #fff;
 }
-.profile-social-list li {
+.social-list li {
   padding: 0px 10px;
-  color: #d52856;
   font-size: 19px;
 }
-.profile-social-list li a {
-  color: #000;
+.social-list li a {
+  color: #fff;
 }
-.profile-social-list li a:hover {
+.social-list li a:hover {
   color: #b52249;
+}
+
+.titulo {
+  font-family: "Bebas Neue", cursive;
+  color: #fff;
+  font-size: 48px;
+  line-height: 0.5em;
+}
+
+.sub {
+  color: #fff;
+  font-size: 27px;
+  font-family: "Bakbak One", cursive;
+  line-height: 0px;
+}
+
+@media (max-width: 576px) {
+  .parallax {
+    font-size: 1.2em;
+    font-weight: bold;
+  }
 }
 
 /*# sourceMappingURL=output.css.map */
