--- a/input.scss
+++ b/input.scss
@@ -1,4 +1,3 @@
-
 @mixin crimson {
   background: #d52856;
   border: none;
@@ -19,12 +18,6 @@
   @include crimson();
 }
 
-.bg-lightdark{
-  background: #6351ce;
-}
-
-
-
 .container-carrossel {
   height: 535px;
   position: relative;
@@ -36,23 +29,7 @@
     -ms-transform: translate(-30%, 0%);
     transform: translate(-30%, 0%);
     }
-
- 
-
-  .first-1slide {
-    background: url("img/rogerio_flexao.jpg");  
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-  }
 }
-
-// .img-carrossel {
-//   background-size: cover;
-//   object-fit: contain;
-//   filter: brightness(50%);
-// } 
 
 .circular-img {
   width: 140px;
@@ -82,10 +59,6 @@
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
-}
-
-.whatscollor {
-  color: #32BB46;
 }
 
 .social-list {
@@ -126,3 +99,10 @@
     font-weight: bold;
    }
  }
+
+
+//  Implementações
+
+.whatscollor {
+  color: #32BB46;
+}
